<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingRight="16dp"
    android:paddingLeft="16dp"
    android:paddingTop="8dp"
    android:paddingBottom="8dp">

    <TextView
        android:id="@+id/text_view_descricao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/descricao_linha_bus"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="@color/primaryLightColor"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="8dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/linha_bus"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/text_view_linha"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="16dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/tarifa_bus"
                android:textStyle="bold"/>

             <TextView
                android:id="@+id/text_view_tarifa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 android:paddingStart="16dp"/>


        </LinearLayout>

    </LinearLayout>
</LinearLayout>