<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.GalleryFragment"
    android:orientation="vertical"
    android:background="@color/white"
    >

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:paddingHorizontal="16dp"
       android:paddingTop="16dp">

      <de.hdodenhof.circleimageview.CircleImageView
          android:layout_width="80dp"
          android:layout_height="80dp"
          android:layout_weight="1"
          app:civ_border_width="0dp"
          app:civ_border_color="@color/primaryLightColor"
          android:id="@+id/place_externo"
          android:layout_gravity="center_horizontal"
          android:src="@drawable/visao1"
           />

      <de.hdodenhof.circleimageview.CircleImageView
          android:layout_width="80dp"
          android:layout_height="80dp"
          android:layout_weight="1"
          app:civ_border_width="0dp"
          app:civ_border_color="@color/primaryLightColor"
          android:id="@+id/place_labs"
          android:layout_gravity="center_horizontal"
          android:src="@drawable/gallery_lab_camb1"
         />

      <de.hdodenhof.circleimageview.CircleImageView
          android:layout_width="80dp"
          android:layout_height="80dp"
          android:layout_weight="1"
          app:civ_border_width="0dp"
          app:civ_border_color="@color/primaryLightColor"
          android:id="@+id/place_interno"
          android:layout_gravity="center_horizontal"
          android:src="@drawable/gallery_corredor"
        />

   </LinearLayout>

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:paddingHorizontal="16dp"
       android:paddingTop="8dp"
   >

         <TextView
             android:layout_width="80dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:layout_gravity="center_horizontal"

             android:textAlignment="center"
             android:textColor="@color/primaryColor"
             android:textSize="@dimen/subtitle"
             android:fontFamily="@font/montserrat"

             android:text="@string/areas_externas"
             app:autoSizeTextType="uniform" />


         <TextView
             android:id="@+id/place_description"
             android:layout_width="80dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:textAlignment="center"
             android:textColor="@color/primaryColor"
             android:textSize="@dimen/subtitle"
             android:fontFamily="@font/montserrat"
             android:text="@string/laboratorios"
             app:autoSizeTextType="uniform" />

         <TextView
             android:id="@+id/place_description_interno"
             android:layout_width="80dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:textAlignment="center"
             android:textColor="@color/primaryColor"
             android:textSize="@dimen/subtitle"
             android:fontFamily="@font/montserrat"
             android:text="@string/outros_espacos"
             app:autoSizeTextType="uniform" />
      </LinearLayout>

   <androidx.recyclerview.widget.RecyclerView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:id="@+id/recycler_view_grid"
       android:layout_marginTop="16dp"
       />
</LinearLayout>